[gd_scene load_steps=3 format=3 uid="uid://c2equl4umuelj"]

[ext_resource type="Script" uid="uid://jbfx4wbx87wm" path="res://addons/diisis/editor/src/head_property_2.gd" id="1_sdsq2"]
[ext_resource type="PackedScene" uid="uid://c5vpxjprppa8n" path="res://addons/diisis/editor/src/option_button_embed/option_button_embed.tscn" id="2_3op7w"]

[node name="HeadProperty2" type="VBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 66.0
grow_horizontal = 2
script = ExtResource("1_sdsq2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="DataTypeButton" parent="HBoxContainer" instance=ExtResource("2_3op7w")]
layout_mode = 2
icon = null
options = Array[String](["string", "drop down", "boolean"])

[node name="NameEditContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/NameEditContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/NameEditContainer/PanelContainer"]
layout_mode = 2

[node name="PropertyNameLabel2" type="Label" parent="HBoxContainer/NameEditContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "property name"

[node name="PropertyNameEdit" type="LineEdit" parent="HBoxContainer/NameEditContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(121.325, 0)
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/NameEditContainer"]
layout_mode = 2

[node name="PropertyNameLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "property name"

[node name="DataTypeLabelContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/DataTypeLabelContainer"]
layout_mode = 2

[node name="DataTypeLabel" type="Label" parent="HBoxContainer/DataTypeLabelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="DeleteButton" type="Button" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
text = "X"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="StringValueEdit" type="LineEdit" parent="MarginContainer/HBoxContainer2"]
layout_mode = 2

[node name="DropDownContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer2"]
layout_mode = 2

[node name="DropDownButton" parent="MarginContainer/HBoxContainer2/DropDownContainer" instance=ExtResource("2_3op7w")]
layout_mode = 2
icon = null
options = Array[String](["sophie-emotion", "character", "heather-emotion"])

[node name="DropDownValueButton" parent="MarginContainer/HBoxContainer2/DropDownContainer" instance=ExtResource("2_3op7w")]
layout_mode = 2
icon = null

[node name="BooleanButton" type="CheckBox" parent="MarginContainer/HBoxContainer2"]
layout_mode = 2
focus_mode = 0
text = "boolean"

[node name="UndefinedDropDownsLabel" type="Label" parent="MarginContainer/HBoxContainer2"]
visible = false
layout_mode = 2
text = "undefined dropdowns"

[connection signal="option_pressed" from="HBoxContainer/DataTypeButton" to="." method="_on_data_type_button_option_pressed"]
[connection signal="text_changed" from="HBoxContainer/NameEditContainer/PanelContainer/VBoxContainer/PropertyNameEdit" to="." method="_on_property_name_edit_text_changed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="text_changed" from="MarginContainer/HBoxContainer2/StringValueEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="option_pressed" from="MarginContainer/HBoxContainer2/DropDownContainer/DropDownButton" to="." method="_on_drop_down_button_option_pressed"]
[connection signal="option_pressed" from="MarginContainer/HBoxContainer2/DropDownContainer/DropDownValueButton" to="." method="_on_drop_down_value_button_option_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer2/BooleanButton" to="." method="_on_boolean_button_pressed"]
